SFDCProject/src/objects/AHJ_Database__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incorporation_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incorporation Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jurisdiction_Name__c</fullName>
        <label>Jurisdiction Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>AHJ Database</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AHJ Database Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AHJ Databases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>